Mobile theme no longer shows horizontal scrollbars due to min-width statement removal

--- a/theme/css/default.css
+++ b/theme/css/default.css
@@ -29,7 +29,6 @@ blockquote {
 	margin: 0;
 	padding: 0;
 	font-weight: normal;
-	min-width: 450px;
 }
 .site-header a {
 	color: #666;
